<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:weightSum="4">


    <LinearLayout style="@style/LinearLayoutSmall">

        <TextView
            android:id="@+id/inventory_item_name_text"
            style="@style/ListViewProduct"
            tools:text="@string/default_product_name" />

        <TextView
            android:id="@+id/text_product_price"
            style="@style/ListViewProductDetails"
            tools:text="@string/default_product_price" />


    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutSmall2">

        <TextView
            android:id="@+id/text_product_current_stock"
            style="@style/ListViewProductDetails"
            tools:text="@string/default_product_stock" />

        <TextView
            android:id="@+id/text_product_current_sold"
            style="@style/ListViewProductDetails"
            tools:text="@string/default_product_sale" />

    </LinearLayout>

    <ImageView
        android:id="@+id/button_sale"
        style="@style/SaleButtonStyle"
        android:src="@drawable/dollar" />

</LinearLayout>