<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ekzhu.inventoryapp.InventoryActivity">

    <ListView
        android:id="@+id/list"
        style="@style/ListLayoutStyle" />

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_shelter_image"
            android:layout_width="@dimen/empty_image_width"
            android:layout_height="@dimen/empty_image_height"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/default_emptystate_image"
            android:src="@drawable/empty_store" />

        <TextView
            android:id="@+id/text_empty_title"
            style="@style/EmptyStateTitle"
            android:layout_below="@+id/empty_shelter_image"
            android:text="@string/info_empty_store_title" />

        <TextView
            style="@style/EmptyStateSubtitle"
            android:layout_below="@+id/text_empty_title"
            android:text="@string/info_empty_store_subtitle" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        style="@style/FabStyle"
        android:src="@drawable/plus" />

</RelativeLayout>
